--- a/gb/16/6/20/n8017375.md
+++ b/gb/16/6/20/n8017375.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hmzftj3856/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/hmzftj3856/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/hmzftj3856/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hmzftj3856/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hmzftj3856/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hmzftj3856/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hmzftj3856/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hmzftj3856/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>低污染车辆待推广 台中补贴民间设充电站</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/06/202751-600x400.jpg" />
 <h6>环保局今年度预计再增设补贴40站二轮车及3站汽车充电站， 9月30日前受理申请，鼓励私人机关参与、提出需求。（台中市政府提供）
 </h6>
 <hr>
-<p>【大纪元2016年06月20日讯】（大纪元记者黄玉燕台湾台中报导）台中市府欲推广低污染车辆，相关友善充电环境待建置。环保局表示，今年度预计再增设40站二轮车及3站汽车<ahref="https://github.com/hmzftj3856/djy/blob/master/gb/tag/%E5%85%85%E7%94%B5%E7%AB%99.md#1">充电站</a>，二轮车每座补助7,000元、汽车5万元，并享有“四免政策”，9月30日前受理申请，鼓励私人机关参与、提出需求。</p>
-<p>台中为四座低碳示范城市，首创低碳城市自治条例。环保局表示，目前台中市已设<ahref="https://github.com/hmzftj3856/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8.md#1">电动</a>二轮车<ahref="https://github.com/hmzftj3856/djy/blob/master/gb/tag/%E5%85%85%E7%94%B5%E7%AB%99.md#1">充电站</a>394站，其中环保局203站、民间自主建置191站，及<ahref="https://github.com/hmzftj3856/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8.md#1">电动</a>汽车充电站215站，环保局有179站、民间36站。</p>
+<p>【大纪元2016年06月20日讯】（大纪元记者黄玉燕台湾台中报导）台中市府欲推广低污染车辆，相关友善充电环境待建置。环保局表示，今年度预计再增设40站二轮车及3站汽车<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%85%E7%94%B5%E7%AB%99.md#1">充电站</a>，二轮车每座补助7,000元、汽车5万元，并享有“四免政策”，9月30日前受理申请，鼓励私人机关参与、提出需求。</p>
+<p>台中为四座低碳示范城市，首创低碳城市自治条例。环保局表示，目前台中市已设<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8.md#1">电动</a>二轮车<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%85%E7%94%B5%E7%AB%99.md#1">充电站</a>394站，其中环保局203站、民间自主建置191站，及<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8.md#1">电动</a>汽车充电站215站，环保局有179站、民间36站。</p>
 <p>环保局表示，为积极推广低污染车辆使用及建置友善充电环境，今年度预计可补助增设40站电动二轮车及3站电动汽车充电站。二轮车最高每座补助7,000元、汽车5万元，补助总经费43万元，9月30日前提出，补助对象含台中市法人含公寓大厦管理委员会。</p>
 <p>环保局表示，充电站可设置于社区大楼地下停车场等友善场域纳入补助，并要求申请单位提供专用充电停车区、预留充电标示的空间或墙面；户外充电站应有防雨及防水设施，提升充电环境品质。</p>
 <p>环保局指出，未来市府也将针对低碳车辆划设专用停车格、增设充电设施及提供优惠停车费率；目前设中市电动车辆享“四免政策”，包括免牌照税、免燃料费、免停车费及免费充电费；另针对淘汰二行程机车及新购电动二轮车，除中央补助款，市府将加码补助，鼓励民众多使用低污染车辆。</p>
@@ -17,48 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/10/3/25/n2856796.md#1">台财部支持电动车发展　配套明送政院</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/11/6/3/n3275868.md#1">电动车大游行 宣示积极推动电动车</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/12/7/30/n3647240.md#1">太阳能板 恐20年后又造成新污染源</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/13/4/8/n3841614.md#1">新购及换购电动机车 政府为您负担32%-41%</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/14/6/22/n4183894.md#1">迎接绿能新骑机 嘉市提供优质充电环境</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/15/4/10/n4408676.md#1">嘉环保局假日机车定检与电动车试乘体验</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/20/9/8/n12389503.md#1">台湾建F-16战机维修中心 是美国可信赖伙伴</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/20/9/8/n12389014.md#1">前白宫顾问：放大台湾声音 能抵消中共渗透</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/20/9/8/n12388849.md#1">中共拟抛金融核弹 分析：杀敌八百自损一万</a></li>
-<li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/20/9/8/n12388939.md#1">日美澳法学者齐聚 聚焦捍卫台湾民主</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/3/25/n2856796.md#1">台财部支持电动车发展　配套明送政院</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/3/n3275868.md#1">电动车大游行 宣示积极推动电动车</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/7/30/n3647240.md#1">太阳能板 恐20年后又造成新污染源</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/4/8/n3841614.md#1">新购及换购电动机车 政府为您负担32%-41%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/22/n4183894.md#1">迎接绿能新骑机 嘉市提供优质充电环境</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/10/n4408676.md#1">嘉环保局假日机车定检与电动车试乘体验</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680270.md#1">美民主基金会长见蔡英文：与台湾站一起</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680110.md#1">美参院通过竞争法 促美台军事文化外交往来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678778.md#1">台国安局长陈明通：乌俄冲突或长期化 边打边谈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679384.md#1">接见美国民主基金会长 苏贞昌：全球民主伙伴团结合作</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10919284.md#1" target="_blank">陋兰：当告密者成为英雄</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/8/n12388058.md#1">【西岸观察】挺川普 全美游艇游行创纪录</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/8/n12389579.md#1">【直播】前副市长李传良回应中共指控</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/5/n12383239.md#1">【新闻看点】中共触底线白宫震惊 习危险来了</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383819.md#1">500亿加密货币出逃 专家归因中共沉船效应</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12384093.md#1">腾讯微博本月底将停止服务和运营</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/5/n12383230.md#1">台影迷抵制刘亦菲《花木兰》 港网友感动致谢</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12387235.md#1">林志玲丈夫AKIRA 顺利取得台湾居留证</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383538.md#1">曾入围金曲歌王 严咏能台上昏倒不治 享年50岁</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383740.md#1">血旗拿反士兵晕倒 中共军队在国际赛场出糗</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383875.md#1">加拿大10岁男童遭美洲狮攻击 小狗奋勇救人</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383992.md#1">美国空姐分享入住旅馆诀窍 网上爆红</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12385823.md#1">美军B-2轰炸机降落印度洋小岛 画面曝光</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/4/n12380960.md#1">这些食物燃脂、促代谢！自制3饮料边喝边瘦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hmzftj3856/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hmzftj3856/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/6/20/n8017375.htm">低污染车辆待推广 台中补贴民间设充电站</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/6/20/n8017375.htm">低污染车辆待推广 台中补贴民间设充电站</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/hmzftj3856/djy/blob/master/gb/16/6/20/n8017375.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hmzftj3856/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hmzftj3856/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hmzftj3856/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hmzftj3856/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hmzftj3856/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/6/20/n8017375.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
